[gd_scene load_steps=6 format=2]

[ext_resource path="res://actors/3d_control_panel/3dControlPanel.gd" type="Script" id=1]
[ext_resource path="res://actors/3d_control_panel/dark_gray_metal.tres" type="Material" id=2]
[ext_resource path="res://OQ_Toolkit/OQ_Interactables/OQ_ButtonPressable.tscn" type="PackedScene" id=3]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://geiger_counter.ogg" type="AudioStream" id=5]

[node name="ControlPanel" type="Spatial"]
script = ExtResource( 1 )

[node name="BackPlate" type="CSGBox" parent="."]
visible = false
width = 1.44734
height = 0.5
depth = 0.025
material = ExtResource( 2 )

[node name="ControlRods" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.251818, -0.173787, 0.0283998 )

[node name="ScramGroup" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.650793, 0, 0.0127676 )

[node name="ScramLabel" parent="ScramGroup" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.075, 0 )
text = "SCRAM"
margin = 16
billboard = false
depth_test = true
resize_mode = 0
font_size_multiplier = 1.0
font_color = Color( 1, 1, 1, 1 )
background_color = Color( 0, 0, 0, 1 )
transparent = false

[node name="ScramButton" parent="ScramGroup" instance=ExtResource( 3 )]

[node name="NeutronFluxLabel" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.213313, 0.0144023 )
text = "Neutron Flux: 0"
margin = 16
billboard = false
depth_test = true
resize_mode = 0
font_size_multiplier = 1.0
font_color = Color( 1, 1, 1, 1 )
background_color = Color( 0, 0, 0, 1 )
transparent = false

[node name="FluxUpdateTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="GeigerCounter" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
[connection signal="button_pressed" from="ScramGroup/ScramButton" to="." method="_on_ScramButton_button_pressed"]
[connection signal="timeout" from="FluxUpdateTimer" to="." method="_on_FluxUpdateTimer_timeout"]
